--- a/static/style.css
+++ b/static/style.css
@@ -92,7 +92,7 @@ footer .text-muted {
 
 }
 .sticky-header a{
-    color: white !important;;
+    color: white !important;
     text-decoration: none; /* no underline */
     transition: .5s;
 }
@@ -135,6 +135,7 @@ footer .text-muted {
     color: #777;
   }
 .tri-state-toggle {
+    height: 36px;
     background: white;
     box-shadow: inset 0 2px 8px 0 rgba(165,170,174,0.25);
     border-radius: 24px;
@@ -149,7 +150,6 @@ footer .text-muted {
 
 .tri-state-toggle-button {
     border-radius: 22px;
-    height: 35px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -197,3 +197,19 @@ footer .text-muted {
     height: 40px;
     transition: left 0.3s;
   }
+
+.menu-open .navbar-collapse{
+    margin-top: 20px;
+}
+.menu-open .nav-item a{
+  color: black !important;
+}
+.menu-open .nav-item a:hover{
+  color: rgba(0, 0, 0, 0.38) !important;
+}
+
+.search-container{
+    display: flex;
+
+}
+
